namespaces/live.cloud-platform.service.justice.gov.uk/laa-benefit-checker-test/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-benefit-checker-test"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "test"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-crimeapps-core"
    cloud-platform.justice.gov.uk/application: "laa-benefit-checker"
    cloud-platform.justice.gov.uk/owner: "Crime Apps Team: laa-crime-apps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-benefitchecker-1.0-big"
    cloud-platform.justice.gov.uk/team-name: "laa-crime-apps-team"
    cloud-platform.justice.gov.uk/review-after: ""
